--- a/android-app/app/src/main/res/layout/activity_main.xml
+++ b/android-app/app/src/main/res/layout/activity_main.xml
@@ -6,76 +6,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.plant.MainActivity">
 
-    <!-- 스크롤되는 메인 콘텐츠 영역 -->
+    <include
+        android:id="@+id/fixedHeader"
+        layout="@layout/view_header"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fixedHeader"
         app:layout_constraintBottom_toTopOf="@id/bottomNav"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/background">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="80dp">
 
-            <!-- 상단 헤더 -->
-            <include
-                layout="@layout/view_header"/>
-            <!-- 검색바 -->
-            <include
-                layout="@layout/view_search_bar"/>
-            <!-- 계절 카테고리 -->
-            <include
-                layout="@layout/view_season_category"/>
-            <!-- 대표 식물 슬라이드 -->
-            <include
-                android:id="@+id/layoutSlider"
-                layout="@layout/view_featured_slider" />
-            <!-- 인기 스토리 섹션 -->
-            <include
-                android:id="@+id/layoutStories"  layout="@layout/view_story_section"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <!-- 지금 볼 수 있는 식물 -->
-            <include
-                android:id="@+id/layoutAvailable"
-                layout="@layout/view_available_plants"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <include layout="@layout/view_search_bar"/>
+            //CategoryAdapter를 통해 수정 가능(데이터를 이용해서 사진, 텍스트 변경 가능)
+            <include layout="@layout/view_season_category"/>
+            //item_featured_plant.xml을 보면 라일락 페이지 자체는 만들었는데 넘기는 애니메이션 작업이 안됨
+            <include android:id="@+id/layoutSlider" layout="@layout/view_featured_slider" />
+            <include android:id="@+id/layoutStories" layout="@layout/view_story_section" />
+            <include android:id="@+id/layoutAvailable" layout="@layout/view_available_plants" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <!-- 하단 네비게이션 -->
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-20dp"
-        android:backgroundTint="@color/button"
-        android:src="@drawable/baseline_camera_alt_40"
-        android:tint="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/bottomNav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:elevation="10dp"/>
-    <!-- 카메라 FAB -->
+
+    app:fabCustomSize="72dp"
+
+    app:maxImageSize="40dp"
+
+    android:backgroundTint="@color/button"
+    android:src="@drawable/baseline_camera_alt_40"
+    app:tint="@color/white"
+    app:elevation="12dp"
+    app:borderWidth="0dp"
+
+    app:layout_constraintTop_toTopOf="@id/bottomNav"
+    app:layout_constraintBottom_toTopOf="@id/bottomNav"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:backgroundTint="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="60dp" app:backgroundTint="@color/white"
         app:itemIconTint="@color/text1"
         app:itemTextColor="@color/text1"
         app:labelVisibilityMode="labeled"
+        android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_bottom_nav" />
 
