--- a/android-app/app/src/main/res/layout/activity_mypage.xml
+++ b/android-app/app/src/main/res/layout/activity_mypage.xml
@@ -31,21 +31,12 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="20dp"
                 android:text="마이페이지"
+                android:fontFamily="@font/pretendardbold"
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="24dp"
-                android:src="@drawable/round_notifications_none_24"
-                app:layout_constraintBottom_toBottomOf="@id/tvMypageTitle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tvMypageTitle"
-                app:tint="@color/white" />
 
             <ImageView
                 android:id="@+id/ivProfile"
@@ -64,6 +55,7 @@
                 android:layout_marginStart="16dp"
                 android:text="홍길동"
                 android:textColor="@color/white"
+                android:fontFamily="@font/pretendardsemibold"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/ivProfile"
@@ -74,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="\@abcd1234"
+                android:fontFamily="@font/pretendardlight"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@id/tvUserName"
@@ -123,6 +116,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="🌱 식물 탐험가 Lv.3"
+                                android:fontFamily="@font/pretendardmedium"
                                 android:textColor="@color/text1"
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
@@ -146,6 +140,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="📸 발견한 식물 12종"
+                                android:fontFamily="@font/pretendardmedium"
                                 android:textColor="@color/text1"
                                 android:textStyle="bold"
                                 android:textSize="14sp" />
@@ -169,6 +164,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="📸 발견한 식물 12종"
+                                android:fontFamily="@font/pretendardmedium"
                                 android:textColor="@color/text1"
                                 android:textStyle="bold"
                                 android:textSize="14sp" />
@@ -188,6 +184,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="| 최근 본 식물"
+                    android:fontFamily="@font/pretendardmedium"
                     android:textColor="@color/text1"
                     android:textStyle="bold"
                     android:textSize="16sp"
@@ -263,6 +260,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="| 발견한 식물"
+                        android:fontFamily="@font/pretendardmedium"
                         android:textColor="@color/text1"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -290,6 +288,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="| 나의 탐험 기록"
+                        android:fontFamily="@font/pretendardmedium"
                         android:textColor="@color/text1"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -306,57 +305,6 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:tint="#999999" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/menuSettings"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="| 설정"
-                        android:textColor="@color/text1"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                    <ImageView
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:src="@drawable/outline_arrow_forward_ios_24"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="#999999" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/menuCustomerService"
-                    android:layout_width="match_parent"
-                    android:layout_height="53dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="| 고객센터"
-                        android:textColor="@color/text1"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:src="@drawable/outline_arrow_forward_ios_24"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="#999999" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
@@ -377,6 +325,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_camera_alt_40"
+        app:fabCustomSize="72dp"
+        app:maxImageSize="40dp"
         app:tint="@color/white"
         app:backgroundTint="@color/button"
         app:elevation="10dp"
