--- a/android-app/app/src/main/res/layout/item_story.xml
+++ b/android-app/app/src/main/res/layout/item_story.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="16dp"
         android:layout_horizontalMargin="16dp"
         android:text="장미가시에 찔려 죽은 시인"
+        android:fontFamily="@font/pretendardregular"
         android:textColor="@color/text1"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -44,6 +45,7 @@
         android:layout_marginBottom="12dp"
         android:text="독일 시인 릴케라는 사람은 장미꽃을 꺾다가 장미 가시에 찔려..."
         android:textColor="@color/sub_text1"
+        android:fontFamily="@font/pretendardregular"
         android:textSize="10sp"
         android:lineSpacingExtra="2dp"
         android:ellipsize="end"
