--- a/android-app/app/src/main/res/layout/view_search_bar.xml
+++ b/android-app/app/src/main/res/layout/view_search_bar.xml
@@ -24,6 +24,7 @@
             android:layout_toStartOf="@id/ivSearchIcon"
             android:background="@android:color/transparent"
             android:hint="식물 이름, 꽃말로 검색하기"
+            android:fontFamily="@font/pretendardmedium"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:maxLines="1"
